--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "library",
     "description": "Composer version of torrent-rw https://github.com/adriengibrat/torrent-rw",
     "keywords": ["torrent-rw", "bittorrent", "bencode", "torrent"],
+	"license": "GNU General Public License v3.0",
     "require": {
         "php": ">=5.2.0"
     },
